--- a/index.html
+++ b/index.html
@@ -552,6 +552,10 @@
     user-select: none;
   }
   
+  .google-login-btn svg {
+    pointer-events: none;
+  }
+  
   .google-login-btn:hover {
     background: #f9fafb;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -647,7 +651,7 @@
       <button class="auth-close" onclick="document.getElementById('authModal').classList.add('hidden')">×</button>
       <div class="auth-title">Welcome to Sori! 💜</div>
       <div class="auth-subtitle">Sign in to track your progress and level up</div>
-      <button class="google-login-btn" id="googleLoginBtn" onclick="handleGoogleLogin()">
+      <button class="google-login-btn" id="googleLoginBtn" onclick="console.log('Button physically clicked!'); handleGoogleLogin()">
         <svg width="20" height="20" viewBox="0 0 20 20">
           <path fill="#4285F4" d="M19.6 10.23c0-.82-.1-1.42-.25-2.05H10v3.72h5.5c-.15.96-.74 2.31-2.04 3.22v2.45h3.16c1.89-1.73 2.98-4.3 2.98-7.34z"/>
           <path fill="#34A853" d="M13.46 15.13c-.83.59-1.96 1-3.46 1-2.64 0-4.88-1.74-5.68-4.15H1.07v2.52C2.72 17.75 6.09 20 10 20c2.7 0 4.96-.89 6.62-2.42l-3.16-2.45z"/>
@@ -914,7 +918,7 @@ async function updatePracticeStats() {
 }
 
 // Standalone functions for inline onclick handlers (must be global)
-function handleGoogleLogin() {
+window.handleGoogleLogin = function() {
   console.log('🔘 Google login button clicked!');
   
   if (!auth) {
@@ -937,9 +941,9 @@ function handleGoogleLogin() {
       console.error('❌ Login error:', error);
       alert('❌ Login failed: ' + error.message);
     });
-}
+};
 
-function handleMyButton() {
+window.handleMyButton = function() {
   console.log('👤 My button clicked');
   
   if (currentUser) {
@@ -955,7 +959,7 @@ function handleMyButton() {
     alert('⚠️ Please login first to view your profile!');
     document.getElementById('authModal').classList.remove('hidden');
   }
-}
+};
 
 // Auth state observer
 if (auth) {
