--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X1909BBKR5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-X1909BBKR5');
+</script>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sori - Learn Korean</title>
@@ -105,7 +113,7 @@
   <div class="card">
     <div class="category-tabs">
       <button class="tab-button active" id="dailyBtn">💬 Daily</button>
-      <button class="tab-button" id="travelBtn">✈️ Travel</button>
+      <button class="tab-button" id="travelBtn"✈️ Travel</button>
       <button class="tab-button" id="dramaBtn">🎭 K-Drama</button>
     </div>
     <div id="subFilters" style="display:none;"></div>
