--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-X1909BBKR5');
+  gtag('config', 'G-X1Q98DBKR5');
 </script>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -113,7 +113,7 @@
   <div class="card">
     <div class="category-tabs">
       <button class="tab-button active" id="dailyBtn">💬 Daily</button>
-      <button class="tab-button" id="travelBtn"✈️ Travel</button>
+      <button class="tab-button" id="travelBtn">✈️ Travel</button>
       <button class="tab-button" id="dramaBtn">🎭 K-Drama</button>
     </div>
     <div id="subFilters" style="display:none;"></div>
