voice change iphone

--- a/index.html
+++ b/index.html
@@ -649,7 +649,11 @@ function speakText(txt, voices) {
     u.pitch = 1.0;
     u.volume = 1.0;
     const koVoice = voices.find(v =>
-      v.lang && (v.lang === 'ko-KR' || v.lang === 'ko_KR' || v.lang.startsWith('ko-') || v.name.includes('Korean') || v.name.includes('한국'))
+      v.lang && v.lang.includes('ko') && 
+      (v.name.includes('Yuna') || v.name.includes('Sora') || 
+       v.name.includes('Female') || v.name.includes('여성'))
+    ) || voices.find(v =>
+      v.lang && (v.lang === 'ko-KR' || v.lang === 'ko_KR' || v.lang.startsWith('ko-'))
     );
     if (koVoice) u.voice = koVoice;
     u.onerror = (e) => { console.error('Speech error:', e); showError('⚠️ Speech failed. Please try again.'); };
@@ -771,3 +775,4 @@ show();
 </script>
 </body>
 </html>
+
