--- a/index.html
+++ b/index.html
@@ -1,1 +1,136 @@
-<script type="module" src="./js/app.js"></script>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Sori - Learn Korean</title>
+
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      max-width: 720px;
+      margin: 0 auto;
+      padding: 20px;
+      background: linear-gradient(135deg, #f5f3ff 0%, #faf5ff 50%, #f0f9ff 100%);
+      min-height: 100vh;
+    }
+    h1 {
+      font-size: 28px;
+      font-weight: 700;
+      color: #7c3aed;
+      margin-bottom: 8px;
+    }
+    .controls {
+      display: flex;
+      gap: 10px;
+      margin: 10px 0;
+    }
+    button {
+      flex: 1;
+      padding: 10px;
+      border: none;
+      background: #7c3aed;
+      color: white;
+      border-radius: 10px;
+      font-weight: 600;
+      cursor: pointer;
+    }
+    #korean {
+      font-size: 28px;
+      font-weight: 700;
+      margin-top: 20px;
+      color: #222;
+    }
+    #pronunciation {
+      color: #666;
+      font-size: 16px;
+      margin-top: 4px;
+    }
+    #english {
+      font-size: 18px;
+      color: #444;
+      margin-top: 8px;
+    }
+    .sub-filters {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin: 12px 0;
+    }
+    .filter-chip {
+      background: #ede9fe;
+      padding: 6px 10px;
+      border-radius: 14px;
+      cursor: pointer;
+    }
+    .filter-chip.active {
+      background: #7c3aed;
+      color: white;
+    }
+    #errorMsg {
+      display: none;
+      background: #fee2e2;
+      color: #991b1b;
+      padding: 8px 10px;
+      border-radius: 6px;
+      margin-top: 10px;
+    }
+    .progress-dots {
+      margin-top: 20px;
+      display: flex;
+      gap: 8px;
+      justify-content: center;
+    }
+    .dot {
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      background: #ddd;
+      text-align: center;
+      line-height: 14px;
+      font-size: 10px;
+    }
+    .dot.completed {
+      background: #7c3aed;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+  <h1>Sori</h1>
+  <div class="controls">
+    <button id="dailyBtn">Daily</button>
+    <button id="dramaBtn">Drama</button>
+    <button id="travelBtn">Travel</button>
+  </div>
+
+  <div id="subFilters"></div>
+
+  <div id="badge"></div>
+  <div id="context"></div>
+  <div id="korean"></div>
+  <div id="pronunciation"></div>
+  <div id="english"></div>
+
+  <div id="errorMsg"></div>
+
+  <div class="controls">
+    <button id="prevBtn">Prev</button>
+    <button id="playBtn">🔊 Listen & Repeat</button>
+    <button id="nextBtn">Next</button>
+  </div>
+
+  <div class="progress-dots">
+    <div id="dot1" class="dot"></div>
+    <div id="dot2" class="dot"></div>
+    <div id="dot3" class="dot"></div>
+    <div id="dot4" class="dot"></div>
+    <div id="dot5" class="dot"></div>
+  </div>
+  <div id="repCount" style="text-align:center; margin-top:8px; font-size:14px; color:#666;">0</div>
+  <div id="congrats" style="text-align:center; margin-top:10px; font-weight:600; display:none;">🎉 Great job!</div>
+
+  <!-- ✅ JS 연결 -->
+  <script type="module" src="./js/app.js"></script>
+</body>
+</html>
