--- a/index.html
+++ b/index.html
@@ -21,36 +21,27 @@
       margin-bottom: 8px;
     }
     .controls {
-      display: flex;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
       gap: 10px;
       margin: 10px 0;
     }
+    .controls.bottom {
+      grid-template-columns: repeat(3, 1fr);
+      margin-top: 16px;
+    }
     button {
-      flex: 1;
-      padding: 10px;
+      padding: 12px 10px;
       border: none;
       background: #7c3aed;
       color: white;
       border-radius: 10px;
-      font-weight: 600;
+      font-weight: 700;
       cursor: pointer;
     }
-    #korean {
-      font-size: 28px;
-      font-weight: 700;
-      margin-top: 20px;
-      color: #222;
-    }
-    #pronunciation {
-      color: #666;
-      font-size: 16px;
-      margin-top: 4px;
-    }
-    #english {
-      font-size: 18px;
-      color: #444;
-      margin-top: 8px;
-    }
+    button:disabled { opacity: .5; cursor: not-allowed; }
+
+    /* --- filters --- */
     .sub-filters {
       display: flex;
       flex-wrap: wrap;
@@ -62,64 +53,83 @@
       padding: 6px 10px;
       border-radius: 14px;
       cursor: pointer;
+      font-weight: 600;
+      font-size: 12px;
     }
     .filter-chip.active {
       background: #7c3aed;
       color: white;
     }
-    #errorMsg {
-      display: none;
-      background: #fee2e2;
-      color: #991b1b;
-      padding: 8px 10px;
-      border-radius: 6px;
-      margin-top: 10px;
-    }
-    .progress-dots {
-      margin-top: 20px;
-      display: flex;
-      gap: 8px;
-      justify-content: center;
-    }
-    .dot {
-      width: 14px;
-      height: 14px;
-      border-radius: 50%;
-      background: #ddd;
-      text-align: center;
-      line-height: 14px;
-      font-size: 10px;
-    }
-    .dot.completed {
-      background: #7c3aed;
-      color: white;
-    }
+
+    /* --- card / text area --- */
+    .card { border-radius: 16px; padding: 16px; margin: 12px 0; background: #fff; box-shadow: 0 2px 12px rgba(0,0,0,0.04); }
+    .badge { display:inline-block; background:#7c3aed; color:#fff; padding:6px 10px; border-radius:10px; font-size:12px; font-weight:800; margin-bottom:8px; }
+    .context-box { background:#f3f4f6; color:#6b7280; border-radius:8px; padding:6px 10px; font-size:12px; font-weight:600; margin-bottom:10px; }
+    .korean-section { background:#f9fafb; border-radius:14px; padding:16px 12px; }
+    .target-display { font-size:28px; font-weight:900; color:#1f2937; text-align:center; line-height:1.2; margin-bottom:6px; }
+    .english-translation { color:#6b7280; font-size:16px; text-align:center; margin-bottom:8px; font-weight:600; }
+    .pronunciation-hint { color:#9ca3af; font-size:13px; font-weight:600; text-align:center; letter-spacing:0.3px; font-style:italic; }
+    .progress { text-align:center; color:#7c3aed; font-size:13px; font-weight:700; margin-top:10px; }
+
+    /* --- error --- */
+    #errorMsg { display:none; background:#fee2e2; color:#991b1b; padding:8px 10px; border-radius:6px; margin-top:10px; font-size:12px; font-weight:600; }
+
+    /* --- dots --- */
+    .progress-dots { margin-top: 14px; display: flex; gap: 8px; justify-content: center; }
+    .dot { width: 14px; height: 14px; border-radius: 50%; background: #ddd; text-align: center; line-height: 14px; font-size: 10px; }
+    .dot.completed { background: #7c3aed; color: white; }
+
+    /* speed row (optional UI already used by app.js) */
+    .speed { display:flex; align-items:center; gap:8px; margin-top:8px; }
+    .speed label { font-size:12px; font-weight:700; color:#7c3aed; }
+    .speed input[type="range"] { width: 140px; }
+    #speedTxt { font-size:12px; font-weight:700; color:#7c3aed; min-width:40px; text-align:right; }
   </style>
 </head>
 <body>
   <h1>Sori</h1>
+
+  <!-- top category buttons -->
   <div class="controls">
     <button id="dailyBtn">Daily</button>
     <button id="dramaBtn">Drama</button>
     <button id="travelBtn">Travel</button>
   </div>
 
+  <!-- sub filters rendered by app.js -->
   <div id="subFilters"></div>
 
-  <div id="badge"></div>
-  <div id="context"></div>
-  <div id="korean"></div>
-  <div id="pronunciation"></div>
-  <div id="english"></div>
+  <!-- phrase display -->
+  <div class="card">
+    <div class="badge" id="badge">Greeting</div>
+    <div class="context-box" id="context">Conversation: First meeting</div>
 
-  <div id="errorMsg"></div>
+    <div class="korean-section">
+      <div class="target-display" id="korean">안녕하세요.</div>
+      <div class="english-translation" id="english">"Hello"</div>
+      <div class="pronunciation-hint" id="pronunciation">annyeonghaseyo</div>
+    </div>
 
-  <div class="controls">
+    <div class="progress" id="prog">1 / 30</div>
+
+    <!-- speed control (used by app.js if present) -->
+    <div class="speed">
+      <label for="speed">Speed</label>
+      <input id="speed" type="range" min="0.3" max="1.0" step="0.1" value="0.75">
+      <span id="speedTxt">0.75x</span>
+    </div>
+
+    <div id="errorMsg"></div>
+  </div>
+
+  <!-- bottom controls -->
+  <div class="controls bottom">
     <button id="prevBtn">Prev</button>
     <button id="playBtn">🔊 Listen & Repeat</button>
     <button id="nextBtn">Next</button>
   </div>
 
+  <!-- repetition dots + counters -->
   <div class="progress-dots">
     <div id="dot1" class="dot"></div>
     <div id="dot2" class="dot"></div>
@@ -127,10 +137,10 @@
     <div id="dot4" class="dot"></div>
     <div id="dot5" class="dot"></div>
   </div>
-  <div id="repCount" style="text-align:center; margin-top:8px; font-size:14px; color:#666;">0</div>
+  <div id="repCount" style="text-align:center; margin-top:6px; font-size:14px; color:#666;">0</div>
   <div id="congrats" style="text-align:center; margin-top:10px; font-weight:600; display:none;">🎉 Great job!</div>
 
-  <!-- ✅ JS 연결 -->
+  <!-- JS entry -->
   <script type="module" src="./js/app.js"></script>
 </body>
 </html>
