--- a/index.html
+++ b/index.html
@@ -1,105 +1,168 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X1909BBKR5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-X1Q98DBKR5');
+  </script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sori - Learn Korean</title>
 
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
   <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      max-width: 720px;
-      margin: 0 auto;
-      padding: 20px;
-      background: linear-gradient(135deg, #f5f3ff 0%, #faf5ff 50%, #f0f9ff 100%);
-      min-height: 100vh;
-    }
-    h1 {
-      font-size: 28px;
-      font-weight: 700;
-      color: #7c3aed;
-      margin-bottom: 8px;
-    }
-    .controls {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 10px;
-      margin: 10px 0;
-    }
-    .controls.bottom {
-      grid-template-columns: repeat(3, 1fr);
-      margin-top: 16px;
-    }
-    button {
-      padding: 12px 10px;
-      border: none;
-      background: #7c3aed;
-      color: white;
-      border-radius: 10px;
-      font-weight: 700;
-      cursor: pointer;
-    }
-    button:disabled { opacity: .5; cursor: not-allowed; }
+    * { box-sizing: border-box; }
+    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; max-width: 680px; margin: 0 auto; padding: 12px; background: #faf8ff; min-height: 100vh; }
+    h1 { font-size: 24px; margin: 0 0 4px 0; color: #7c3aed; font-weight: 800; }
+    .intro { color: #9ca3af; font-size: 12px; margin-bottom: 10px; line-height: 1.3; font-weight: 500; }
+    .card { border-radius: 16px; padding: 16px; margin: 8px 0; box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04); background: white; }
 
-    /* --- filters --- */
-    .sub-filters {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin: 12px 0;
-    }
-    .filter-chip {
-      background: #ede9fe;
-      padding: 6px 10px;
-      border-radius: 14px;
-      cursor: pointer;
-      font-weight: 600;
-      font-size: 12px;
-    }
-    .filter-chip.active {
-      background: #7c3aed;
-      color: white;
-    }
+    .category-tabs { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 6px; margin-bottom: 8px; }
+    .tab-button { padding: 10px 14px; border: 2px solid #f3f4f6; border-radius: 14px; background: #f9fafb; color: #9ca3af; cursor: pointer; font-size: 13px; font-weight: 700; transition: all 0.2s; }
+    .tab-button:hover { background: #f3f4f6; }
+    .tab-button.active { background: #7c3aed; color: white; border-color: #7c3aed; box-shadow: 0 2px 8px rgba(124, 58, 237, 0.2); }
 
-    /* --- card / text area --- */
-    .card { border-radius: 16px; padding: 16px; margin: 12px 0; background: #fff; box-shadow: 0 2px 12px rgba(0,0,0,0.04); }
-    .badge { display:inline-block; background:#7c3aed; color:#fff; padding:6px 10px; border-radius:10px; font-size:12px; font-weight:800; margin-bottom:8px; }
-    .context-box { background:#f3f4f6; color:#6b7280; border-radius:8px; padding:6px 10px; font-size:12px; font-weight:600; margin-bottom:10px; }
-    .korean-section { background:#f9fafb; border-radius:14px; padding:16px 12px; }
-    .target-display { font-size:28px; font-weight:900; color:#1f2937; text-align:center; line-height:1.2; margin-bottom:6px; }
-    .english-translation { color:#6b7280; font-size:16px; text-align:center; margin-bottom:8px; font-weight:600; }
-    .pronunciation-hint { color:#9ca3af; font-size:13px; font-weight:600; text-align:center; letter-spacing:0.3px; font-style:italic; }
-    .progress { text-align:center; color:#7c3aed; font-size:13px; font-weight:700; margin-top:10px; }
+    .sub-filters { display: flex; gap: 5px; flex-wrap: wrap; margin-bottom: 8px; padding: 10px; background: #f9fafb; border-radius: 10px; }
+    .filter-chip { padding: 5px 10px; border-radius: 14px; background: white; border: 2px solid #e5e7eb; color: #6b7280; cursor: pointer; font-size: 12px; font-weight: 600; transition: all 0.2s; }
+    .filter-chip:hover { background: #f9fafb; }
+    .filter-chip.active { background: #7c3aed; color: white; border-color: #7c3aed; }
 
-    /* --- error --- */
-    #errorMsg { display:none; background:#fee2e2; color:#991b1b; padding:8px 10px; border-radius:6px; margin-top:10px; font-size:12px; font-weight:600; }
+    .badge { display: inline-block; background: #7c3aed; color: white; padding: 5px 10px; border-radius: 10px; font-size: 11px; font-weight: 800; margin-bottom: 5px; }
+    .context-box { background: #f9fafb; border-radius: 8px; padding: 6px 10px; margin-bottom: 10px; font-size: 12px; color: #6b7280; font-weight: 600; }
 
-    /* --- dots --- */
-    .progress-dots { margin-top: 14px; display: flex; gap: 8px; justify-content: center; }
-    .dot { width: 14px; height: 14px; border-radius: 50%; background: #ddd; text-align: center; line-height: 14px; font-size: 10px; }
-    .dot.completed { background: #7c3aed; color: white; }
+    .korean-section { background: #f9fafb; border-radius: 14px; padding: 16px 12px; margin: 8px 0; }
+    .target-display { font-size: 28px; font-weight: 900; color: #1f2937; text-align: center; line-height: 1.2; margin-bottom: 6px; }
+    .english-translation { color: #6b7280; font-size: 16px; text-align: center; margin-bottom: 10px; font-weight: 600; }
+    .pronunciation-hint { color: #9ca3af; font-size: 13px; font-weight: 600; text-align: center; letter-spacing: 0.3px; margin-bottom: 0; font-style: italic; }
 
-    /* speed row (optional UI already used by app.js) */
-    .speed { display:flex; align-items:center; gap:8px; margin-top:8px; }
-    .speed label { font-size:12px; font-weight:700; color:#7c3aed; }
-    .speed input[type="range"] { width: 140px; }
-    #speedTxt { font-size:12px; font-weight:700; color:#7c3aed; min-width:40px; text-align:right; }
+    button { padding: 12px 18px; border: 0; border-radius: 14px; background: #7c3aed; color: white; cursor: pointer; font-size: 15px; font-weight: 800; width: 100%; box-shadow: 0 2px 8px rgba(124, 58, 237, 0.2); transition: all 0.2s; }
+    button:hover { background: #6d28d9; box-shadow: 0 4px 12px rgba(124, 58, 237, 0.25); }
+    button:disabled { opacity: 0.4; cursor: not-allowed; }
+    button.secondary { background: #f9fafb; color: #6b7280; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08); }
+    button.secondary:hover { background: #f3f4f6; }
+    .button-group { display: grid; grid-template-columns: 1fr 1fr; gap: 6px; margin-top: 8px; }
+
+    .repetition-tracker { margin: 8px 0; padding: 10px; background: #f9fafb; border-radius: 10px; }
+    .repetition-label { font-size: 12px; font-weight: 600; color: #6b7280; margin-bottom: 8px; text-align: center; }
+    .repetition-dots { display: flex; gap: 5px; justify-content: center; margin-bottom: 8px; }
+    .rep-dot { width: 32px; height: 32px; border-radius: 50%; border: 2px solid #e5e7eb; background: white; display: flex; align-items: center; justify-content: center; font-size: 14px; transition: all 0.3s; }
+    .rep-dot.completed { background: #7c3aed; border-color: #7c3aed; transform: scale(1.1); }
+
+    .congratulations { background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); padding: 12px; border-radius: 10px; text-align: center; margin: 8px 0; display: none; animation: slideIn 0.5s ease-out; }
+    .congratulations.show { display: block; }
+    .congratulations-emoji { font-size: 36px; margin-bottom: 4px; }
+    .congratulations-text { font-size: 16px; font-weight: 800; color: #92400e; margin-bottom: 2px; }
+    .congratulations-subtext { font-size: 12px; color: #92400e; font-weight: 600; }
+    @keyframes slideIn { from { opacity: 0; transform: translateY(-20px); } to { opacity: 1; transform: translateY(0); } }
+
+    .progress { text-align: center; color: #7c3aed; font-size: 13px; font-weight: 700; margin-top: 8px; }
+    .voice-speed { display: flex; align-items: center; justify-content: center; gap: 8px; margin-top: 8px; padding: 8px; background: #f9fafb; border-radius: 8px; }
+    .voice-speed label { color: #7c3aed; font-size: 12px; font-weight: 600; }
+    .voice-speed input { width: 110px; cursor: pointer; }
+    .voice-speed input[type="range"] { -webkit-appearance: none; appearance: none; height: 5px; background: #e5e7eb; border-radius: 10px; outline: none; }
+    .voice-speed input[type="range"]::-webkit-slider-thumb { -webkit-appearance: none; appearance: none; width: 16px; height: 16px; background: #7c3aed; border-radius: 50%; cursor: pointer; transition: all 0.2s; }
+    .voice-speed input[type="range"]::-webkit-slider-thumb:hover { background: #6d28d9; transform: scale(1.1); }
+    .voice-speed input[type="range"]::-moz-range-thumb { width: 16px; height: 16px; background: #7c3aed; border: none; border-radius: 50%; cursor: pointer; transition: all 0.2s; }
+    .voice-speed input[type="range"]::-moz-range-thumb:hover { background: #6d28d9; transform: scale(1.1); }
+    .voice-speed span { color: #7c3aed; font-weight: 700; font-size: 12px; min-width: 45px; }
+
+    .error-msg { background: #fee2e2; color: #991b1b; padding: 8px 12px; border-radius: 8px; margin-top: 8px; font-size: 11px; font-weight: 600; display: none; }
+
+    @media (max-width: 640px) { body { padding: 12px; } h1 { font-size: 24px; } .card { padding: 16px; } .target-display { font-size: 28px; } .pronunciation-hint { font-size: 15px; } .category-tabs { grid-template-columns: 1fr; } }
+
+    /* Header and Auth */
+    .auth-section { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.6); align-items: center; justify-content: center; z-index: 9999; padding: 20px; }
+    .auth-section:not(.hidden) { display: flex; }
+    .header-container { display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px; position: relative; z-index: 1; }
+    .header-left { flex: 1; }
+    .header-right { display: flex; gap: 8px; }
+
+    .login-btn { background: #7c3aed; color: white; border: none; padding: 8px 16px; border-radius: 12px; font-size: 13px; font-weight: 700; cursor: pointer; transition: all 0.2s; }
+    .login-btn:hover { background: #6d28d9; }
+    .my-btn { background: #f9fafb; color: #6b7280; border: 2px solid #e5e7eb; padding: 8px 16px; border-radius: 12px; font-size: 13px; font-weight: 700; cursor: pointer; transition: all 0.2s; }
+    .my-btn:hover { background: #f3f4f6; }
+
+    .auth-card { background: white; padding: 40px; border-radius: 24px; text-align: center; max-width: 400px; width: 100%; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3); position: relative; pointer-events: auto; }
+    .auth-close { position: absolute; top: 16px; right: 16px; background: none; border: none; font-size: 28px; color: #9ca3af; cursor: pointer; width: 32px; height: 32px; display: flex; align-items: center; justify-content: center; border-radius: 8px; line-height: 1; padding: 0; }
+    .auth-close:hover { background: #f3f4f6; color: #6b7280; }
+    .auth-title { font-size: 28px; font-weight: 800; color: #7c3aed; margin-bottom: 8px; }
+    .auth-subtitle { font-size: 14px; color: #9ca3af; margin-bottom: 24px; }
+    .google-login-btn { background: white; border: 2px solid #e5e7eb; padding: 14px 24px; border-radius: 12px; font-size: 16px; font-weight: 600; color: #1f2937; cursor: pointer; display: inline-flex; align-items: center; justify-content: center; gap: 12px; transition: all 0.2s; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06); pointer-events: auto; user-select: none; }
+    .google-login-btn svg { pointer-events: none; }
+    .google-login-btn:hover { background: #f9fafb; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); transform: translateY(-1px); }
+    .google-login-btn:active { transform: translateY(0); background: #f3f4f6; }
+
+    .user-profile { display: flex; align-items: center; gap: 8px; padding: 6px 12px; background: white; border-radius: 12px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06); }
+    .user-avatar { width: 32px; height: 32px; border-radius: 50%; border: 2px solid #7c3aed; }
+    .user-info { flex: 1; text-align: left; }
+    .user-name { font-size: 13px; font-weight: 700; color: #1f2937; }
+    .user-level { font-size: 11px; color: #7c3aed; font-weight: 600; }
+    .logout-btn { background: #f9fafb; border: none; padding: 6px 10px; border-radius: 8px; font-size: 11px; font-weight: 600; color: #6b7280; cursor: pointer; }
+    .logout-btn:hover { background: #f3f4f6; }
+    .stats-card { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 6px; margin-bottom: 8px; }
+    .stat-item { background: #f9fafb; padding: 10px; border-radius: 10px; text-align: center; }
+    .stat-value { font-size: 18px; font-weight: 800; color: #7c3aed; }
+    .stat-label { font-size: 10px; color: #6b7280; font-weight: 600; margin-top: 3px; }
   </style>
 </head>
 <body>
-  <h1>Sori</h1>
-
-  <!-- top category buttons -->
-  <div class="controls">
-    <button id="dailyBtn">Daily</button>
-    <button id="dramaBtn">Drama</button>
-    <button id="travelBtn">Travel</button>
+  <!-- Header -->
+  <div class="header-container">
+    <div class="header-left">
+      <h1>Sori <span style="font-size: 14px; color: #9ca3af; font-weight: 600;">(beta)</span></h1>
+      <div class="intro">Master Korean with K-Drama lines and daily conversations 💕</div>
+    </div>
+    <div class="header-right">
+      <button id="loginBtn" class="login-btn" onclick="window.SoriAuth.handleLogin()">Login</button>
+      <button id="myBtn" class="my-btn" onclick="window.SoriAuth.handleMy()">My</button>
+    </div>
   </div>
 
-  <!-- sub filters rendered by app.js -->
-  <div id="subFilters"></div>
+  <!-- User Mini Section -->
+  <div id="userSection" style="display:none; margin-bottom:8px;">
+    <div class="user-profile">
+      <img id="userAvatar" class="user-avatar" src="" alt="avatar" />
+      <div class="user-info">
+        <div class="user-name" id="userName">User</div>
+        <div class="user-level" id="userLevel">Level 1</div>
+      </div>
+      <button id="logoutBtn" class="logout-btn">Logout</button>
+    </div>
 
-  <!-- phrase display -->
+    <div class="stats-card">
+      <div class="stat-item">
+        <div class="stat-value" id="totalDays">0</div>
+        <div class="stat-label">Days</div>
+      </div>
+      <div class="stat-item">
+        <div class="stat-value" id="streak">0</div>
+        <div class="stat-label">Streak</div>
+      </div>
+      <div class="stat-item">
+        <div class="stat-value" id="xpPoints">0</div>
+        <div class="stat-label">XP</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="category-tabs">
+      <button class="tab-button active" id="dailyBtn">💬 Daily</button>
+      <button class="tab-button" id="travelBtn">✈️ Travel</button>
+      <button class="tab-button" id="dramaBtn">🎭 K-Drama</button>
+    </div>
+    <div id="subFilters" style="display:none;"></div>
+  </div>
+
   <div class="card">
     <div class="badge" id="badge">Greeting</div>
     <div class="context-box" id="context">Conversation: First meeting</div>
@@ -110,37 +173,55 @@
       <div class="pronunciation-hint" id="pronunciation">annyeonghaseyo</div>
     </div>
 
-    <div class="progress" id="prog">1 / 30</div>
+    <div class="repetition-tracker">
+      <div class="repetition-label">🎯 Practice Count: <span id="repCount">0</span> / 5</div>
+      <div class="repetition-dots" id="repDots">
+        <div class="rep-dot" id="dot1"></div>
+        <div class="rep-dot" id="dot2"></div>
+        <div class="rep-dot" id="dot3"></div>
+        <div class="rep-dot" id="dot4"></div>
+        <div class="rep-dot" id="dot5"></div>
+      </div>
+    </div>
 
-    <!-- speed control (used by app.js if present) -->
-    <div class="speed">
-      <label for="speed">Speed</label>
-      <input id="speed" type="range" min="0.3" max="1.0" step="0.1" value="0.75">
+    <div class="congratulations" id="congrats">
+      <div class="congratulations-emoji">🎉</div>
+      <div class="congratulations-text">참 잘했어요!</div>
+      <div class="congratulations-subtext">Great job! Ready for the next one?</div>
+    </div>
+
+    <button id="playBtn">🔊 Listen & Repeat</button>
+    <div class="error-msg" id="errorMsg"></div>
+
+    <div class="voice-speed">
+      <label>Speed:</label>
+      <input type="range" id="speed" min="0.3" max="1.0" step="0.1" value="0.75">
       <span id="speedTxt">0.75x</span>
     </div>
 
-    <div id="errorMsg"></div>
+    <div class="practice-tip">
+      💡 <strong>Tip:</strong> Listen carefully and repeat multiple times. Consistency is key!
+    </div>
   </div>
 
-  <!-- bottom controls -->
-  <div class="controls bottom">
-    <button id="prevBtn">Prev</button>
-    <button id="playBtn">🔊 Listen & Repeat</button>
-    <button id="nextBtn">Next</button>
+  <div class="card">
+    <div class="button-group">
+      <button class="secondary" id="prevBtn">◀ Previous</button>
+      <button class="secondary" id="nextBtn">▶ Next</button>
+    </div>
+    <div class="progress" id="prog">1 / 30</div>
   </div>
 
-  <!-- repetition dots + counters -->
-  <div class="progress-dots">
-    <div id="dot1" class="dot"></div>
-    <div id="dot2" class="dot"></div>
-    <div id="dot3" class="dot"></div>
-    <div id="dot4" class="dot"></div>
-    <div id="dot5" class="dot"></div>
-  </div>
-  <div id="repCount" style="text-align:center; margin-top:6px; font-size:14px; color:#666;">0</div>
-  <div id="congrats" style="text-align:center; margin-top:10px; font-weight:600; display:none;">🎉 Great job!</div>
+  <!-- Data scripts -->
+  <script src="data/daily.js"></script>
+  <script src="data/drama.js"></script>
+  <script src="data/travel.js"></script>
+  <script src="data/dataindex.js"></script>
 
-  <!-- JS entry -->
-  <script type="module" src="./js/app.js"></script>
+  <!-- Core scripts -->
+  <script src="state.js"></script>
+  <script src="tts.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
+
