--- a/index.html
+++ b/index.html
@@ -212,18 +212,20 @@
     <div class="progress" id="prog">1 / 30</div>
   </div>
 
-  <!-- Data scripts: 순서 중요 (data 폴더) -->
+  <!-- Data scripts -->
   <script src="data/daily.js" defer></script>
   <script src="data/drama.js" defer></script>
   <script src="data/travel.js" defer></script>
   <script src="data/dataindex.js" defer></script>
 
-  <!-- Core scripts: 루트 경로 (js 폴더 아님) -->
-  <script src="state.js" defer></script>
-  <script src="tts.js" defer></script>
-  <script src="app.js" defer></script>
+  <!-- Core scripts -->
+  <script src="js/state.js" defer></script>
+  <script src="js/tts.js" defer></script>
+  <script src="js/app.js" defer></script>
+
 
 </body>
 </html>
+
 
 
