--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sori - Learn Korean</title>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+  <!-- Firebase (옵션: 실제 로그인 연동 시 사용) -->
+  <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
   <style>
     * { box-sizing: border-box; }
@@ -69,81 +69,29 @@
     .voice-speed input[type="range"]::-moz-range-thumb:hover { background: #6d28d9; transform: scale(1.1); }
     .voice-speed span { color: #7c3aed; font-weight: 700; font-size: 12px; min-width: 45px; }
     .error-msg { background: #fee2e2; color: #991b1b; padding: 8px 12px; border-radius: 8px; margin-top: 8px; font-size: 11px; font-weight: 600; display: none; }
-
-    /* Auth UI (modal is optional, guarded in JS) */
+    @media (max-width: 640px) { body { padding: 12px; } h1 { font-size: 24px; } .card { padding: 16px; } .target-display { font-size: 28px; } .pronunciation-hint { font-size: 15px; } .category-tabs { grid-template-columns: 1fr; } }
     .auth-section { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.6); align-items: center; justify-content: center; z-index: 9999; padding: 20px; }
     .auth-section.hidden { display: none; }
-    .auth-section:not(.hidden) { display: flex; }
     .auth-card { background: white; padding: 40px; border-radius: 24px; text-align: center; max-width: 400px; width: 100%; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3); position: relative; pointer-events: auto; }
     .auth-close { position: absolute; top: 16px; right: 16px; background: none; border: none; font-size: 28px; color: #9ca3af; cursor: pointer; width: 32px; height: 32px; display: flex; align-items: center; justify-content: center; border-radius: 8px; line-height: 1; padding: 0; }
-    .auth-close:hover { background: #f3f4f6; color: #6b7280; }
     .auth-title { font-size: 28px; font-weight: 800; color: #7c3aed; margin-bottom: 8px; }
     .auth-subtitle { font-size: 14px; color: #9ca3af; margin-bottom: 24px; }
-    .google-login-btn { background: white; border: 2px solid #e5e7eb; padding: 14px 24px; border-radius: 12px; font-size: 16px; font-weight: 600; color: #1f2937; cursor: pointer; display: inline-flex; align-items: center; justify-content: center; gap: 12px; transition: all 0.2s; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06); pointer-events: auto; user-select: none; }
-    .google-login-btn:hover { background: #f9fafb; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); transform: translateY(-1px); }
-    .google-login-btn:active { transform: translateY(0); background: #f3f4f6; }
-    .user-profile { display: flex; align-items: center; gap: 8px; padding: 6px 12px; background: white; border-radius: 12px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06); }
-    .user-avatar { width: 32px; height: 32px; border-radius: 50%; border: 2px solid #7c3aed; }
-    .user-info { flex: 1; text-align: left; }
-    .user-name { font-size: 13px; font-weight: 700; color: #1f2937; }
-    .user-level { font-size: 11px; color: #7c3aed; font-weight: 600; }
-    .logout-btn { background: #f9fafb; border: none; padding: 6px 10px; border-radius: 8px; font-size: 11px; font-weight: 600; color: #6b7280; cursor: pointer; }
-    .logout-btn:hover { background: #f3f4f6; }
+    .google-login-btn { background: white; border: 2px solid #e5e7eb; padding: 14px 24px; border-radius: 12px; font-size: 16px; font-weight: 600; color: #1f2937; cursor: pointer; display: inline-flex; align-items: center; justify-content: center; gap: 12px; transition: all 0.2s; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06); user-select: none; }
+    .user-profile { display: none; }
     .stats-card { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 6px; margin-bottom: 8px; }
     .stat-item { background: #f9fafb; padding: 10px; border-radius: 10px; text-align: center; }
     .stat-value { font-size: 18px; font-weight: 800; color: #7c3aed; }
     .stat-label { font-size: 10px; color: #6b7280; font-weight: 600; margin-top: 3px; }
-
-    @media (max-width: 640px) {
-      body { padding: 12px; }
-      h1 { font-size: 24px; }
-      .card { padding: 16px; }
-      .target-display { font-size: 28px; }
-      .pronunciation-hint { font-size: 15px; }
-      .category-tabs { grid-template-columns: 1fr; }
-    }
   </style>
 </head>
 <body>
-  <!-- Header -->
   <div class="header-container" style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px;">
     <div class="header-left">
       <h1>Sori <span style="font-size: 14px; color: #9ca3af; font-weight: 600;">(beta)</span></h1>
       <div class="intro">Master Korean with K-Drama lines and daily conversations</div>
     </div>
-    <div class="header-right">
-      <button id="loginBtn" class="login-btn" onclick="handleGoogleLogin()">Login</button>
-      <button id="myBtn" class="my-btn" onclick="handleMyButton()">My</button>
-    </div>
   </div>
 
-  <!-- Optional User mini section -->
-  <div id="userSection" style="display:none; margin-bottom:8px;">
-    <div class="user-profile">
-      <img id="userAvatar" class="user-avatar" alt="avatar" />
-      <div class="user-info">
-        <div id="userName" class="user-name">User</div>
-        <div id="userLevel" class="user-level">Level 1 - Beginner</div>
-      </div>
-      <button id="logoutBtn" class="logout-btn">Logout</button>
-    </div>
-    <div class="stats-card">
-      <div class="stat-item">
-        <div id="totalDays" class="stat-value">0</div>
-        <div class="stat-label">Days</div>
-      </div>
-      <div class="stat-item">
-        <div id="streak" class="stat-value">0</div>
-        <div class="stat-label">Streak</div>
-      </div>
-      <div class="stat-item">
-        <div id="xpPoints" class="stat-value">0</div>
-        <div class="stat-label">XP</div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Category -->
   <div class="card">
     <div class="category-tabs">
       <button class="tab-button active" id="dailyBtn">Daily</button>
@@ -153,7 +101,6 @@
     <div id="subFilters" style="display:none;"></div>
   </div>
 
-  <!-- Main content -->
   <div class="card">
     <div class="badge" id="badge">Greeting</div>
     <div class="context-box" id="context">Conversation: First meeting</div>
@@ -203,28 +150,15 @@
     <div class="progress" id="prog">1 / 30</div>
   </div>
 
-  <!-- Optional Auth Modal (shown if not configured) -->
-  <div id="authModal" class="auth-section hidden">
-    <div class="auth-card">
-      <button class="auth-close" onclick="document.getElementById('authModal').classList.add('hidden')">×</button>
-      <div class="auth-title">Sign in</div>
-      <div class="auth-subtitle">Save your streaks and XP</div>
-      <button class="google-login-btn" onclick="handleGoogleLogin()">
-        <svg width="18" height="18" viewBox="0 0 48 48"><path fill="#EA4335" d="M24 9.5c3.9 0 7 1.6 9.2 3.1l6.3-6.3C35.8 2.3 30.4 0 24 0 14.6 0 6.5 5.5 2.6 13.5l7.7 6c1.8-5.4 7-10 13.7-10z"/><path fill="#4285F4" d="M46.5 24.5c0-1.6-.1-2.8-.4-4.1H24v8h12.8c-.5 3-2.1 5.4-4.5 7.1l7 5.4c4.1-3.8 7.2-9.4 7.2-16.4z"/><path fill="#FBBC05" d="M10.4 28.1c-1-3-.9-6.3.1-9.1l-7.9-6.1C.9 16.2 0 19.9 0 24c0 4 1 7.7 2.7 11l7.7-6.1z"/><path fill="#34A853" d="M24 48c6.5 0 12-2.1 16-5.8l-7-5.4c-2 1.3-4.8 2.2-9 2.2-6.7 0-12.3-4.5-14.3-10.6l-7.7 6C6.5 42.5 14.6 48 24 48z"/></svg>
-        Continue with Google
-      </button>
-    </div>
-  </div>
+  <!-- 데이터 파일들 -->
+  <script defer src="data/daily.js"></script>
+  <script defer src="data/drama.js"></script>
+  <script defer src="data/travel.js"></script>
+  <script defer src="data/dataindex.js"></script>
 
-  <!-- Load data first -->
-  <script src="./data/daily.js"></script>
-  <script src="./data/travel.js"></script>
-  <script src="./data/drama.js"></script>
-  <script src="./data/dataindex.js"></script>
-
-  <!-- Core logic -->
-  <script src="./js/state.js"></script>
-  <script src="./js/tts.js"></script>
-  <script src="./js/app.js"></script>
+  <!-- 기능 파일들: state -> tts -> app 순서 필수 -->
+  <script defer src="js/state.js"></script>
+  <script defer src="js/tts.js"></script>
+  <script defer src="js/app.js"></script>
 </body>
 </html>
