--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
     <div class="progress" id="prog">1 / 30</div>
   </div>
 
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+  
   <!-- 데이터 파일들 -->
   <script defer src="data/daily.js"></script>
   <script defer src="data/drama.js"></script>
@@ -162,3 +167,4 @@
   <script defer src="js/app.js"></script>
 </body>
 </html>
+
