--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
     </div>
   </div>
 
+    <!-- Google Login Button -->
+  <div style="text-align:right; margin-bottom:10px;">
+    <button onclick="handleGoogleLogin()" 
+            style="background:#7c3aed;color:white;border:none;padding:8px 16px;
+                   border-radius:12px;font-size:13px;font-weight:700;cursor:pointer;">
+      Sign in with Google
+    </button>
+  </div>
+
   <div class="card">
     <div class="category-tabs">
       <button class="tab-button active" id="dailyBtn">Daily</button>
@@ -167,4 +176,5 @@
   <script defer src="js/app.js"></script>
 </body>
 </html>
+
 
