--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; max-width: 680px; margin: 0 auto; padding: 12px; background: #faf8ff; min-height: 100vh; }
     h1 { font-size: 24px; margin: 0 0 4px 0; color: #7c3aed; font-weight: 800; }
     .intro { color: #9ca3af; font-size: 12px; margin-bottom: 10px; line-height: 1.3; font-weight: 500; }
+
+    .header-container { display:flex; justify-content:space-between; align-items:center; margin-bottom:8px; position: relative; z-index: 1; }
+    .header-right { display:flex; gap:8px; }
+    .login-btn { background:#7c3aed; color:#fff; border:none; padding:8px 16px; border-radius:12px; font-size:13px; font-weight:700; cursor:pointer; transition:.2s; }
+    .login-btn:hover { background:#6d28d9; }
+    .my-btn { background:#f9fafb; color:#6b7280; border:2px solid #e5e7eb; padding:8px 16px; border-radius:12px; font-size:13px; font-weight:700; cursor:pointer; transition:.2s; }
+    .my-btn:hover { background:#f3f4f6; }
+
     .card { border-radius: 16px; padding: 16px; margin: 8px 0; box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04); background: white; }
     .category-tabs { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 6px; margin-bottom: 8px; }
     .tab-button { padding: 10px 14px; border: 2px solid #f3f4f6; border-radius: 14px; background: #f9fafb; color: #9ca3af; cursor: pointer; font-size: 13px; font-weight: 700; transition: all 0.2s; }
@@ -33,18 +41,20 @@
     .filter-chip { padding: 5px 10px; border-radius: 14px; background: white; border: 2px solid #e5e7eb; color: #6b7280; cursor: pointer; font-size: 12px; font-weight: 600; transition: all 0.2s; }
     .filter-chip:hover { background: #f9fafb; }
     .filter-chip.active { background: #7c3aed; color: white; border-color: #7c3aed; }
+
     .badge { display: inline-block; background: #7c3aed; color: white; padding: 5px 10px; border-radius: 10px; font-size: 11px; font-weight: 800; margin-bottom: 5px; }
     .context-box { background: #f9fafb; border-radius: 8px; padding: 6px 10px; margin-bottom: 10px; font-size: 12px; color: #6b7280; font-weight: 600; }
     .korean-section { background: #f9fafb; border-radius: 14px; padding: 16px 12px; margin: 8px 0; }
     .target-display { font-size: 28px; font-weight: 900; color: #1f2937; text-align: center; line-height: 1.2; margin-bottom: 6px; }
     .english-translation { color: #6b7280; font-size: 16px; text-align: center; margin-bottom: 10px; font-weight: 600; }
     .pronunciation-hint { color: #9ca3af; font-size: 13px; font-weight: 600; text-align: center; letter-spacing: 0.3px; margin-bottom: 0; font-style: italic; }
-    .pronunciation-section { display: none; }
+
     button { padding: 12px 18px; border: 0; border-radius: 14px; background: #7c3aed; color: white; cursor: pointer; font-size: 15px; font-weight: 800; width: 100%; box-shadow: 0 2px 8px rgba(124, 58, 237, 0.2); transition: all 0.2s; }
     button:hover { background: #6d28d9; box-shadow: 0 4px 12px rgba(124, 58, 237, 0.25); }
     button:disabled { opacity: 0.4; cursor: not-allowed; }
     button.secondary { background: #f9fafb; color: #6b7280; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08); }
     button.secondary:hover { background: #f3f4f6; }
+
     .button-group { display: grid; grid-template-columns: 1fr 1fr; gap: 6px; margin-top: 8px; }
     .practice-tip { background: #fffbeb; border-left: 3px solid #f59e0b; padding: 8px 12px; border-radius: 10px; margin-top: 8px; font-size: 12px; color: #92400e; line-height: 1.4; font-weight: 500; }
     .repetition-tracker { margin: 8px 0; padding: 10px; background: #f9fafb; border-radius: 10px; }
@@ -64,20 +74,43 @@
     .voice-speed input { width: 110px; cursor: pointer; }
     .voice-speed input[type="range"] { -webkit-appearance: none; appearance: none; height: 5px; background: #e5e7eb; border-radius: 10px; outline: none; }
     .voice-speed input[type="range"]::-webkit-slider-thumb { -webkit-appearance: none; appearance: none; width: 16px; height: 16px; background: #7c3aed; border-radius: 50%; cursor: pointer; transition: all 0.2s; }
-    .voice-speed input[type="range"]::-webkit-slider-thumb:hover { background: #6d28d9; transform: scale(1.1); }
     .voice-speed input[type="range"]::-moz-range-thumb { width: 16px; height: 16px; background: #7c3aed; border: none; border-radius: 50%; cursor: pointer; transition: all 0.2s; }
-    .voice-speed input[type="range"]::-moz-range-thumb:hover { background: #6d28d9; transform: scale(1.1); }
     .voice-speed span { color: #7c3aed; font-weight: 700; font-size: 12px; min-width: 45px; }
     .error-msg { background: #fee2e2; color: #991b1b; padding: 8px 12px; border-radius: 8px; margin-top: 8px; font-size: 11px; font-weight: 600; display: none; }
-    @media (max-width: 640px) { body { padding: 12px; } h1 { font-size: 24px; } .card { padding: 16px; } .target-display { font-size: 28px; } .pronunciation-hint { font-size: 15px; } .category-tabs { grid-template-columns: 1fr; } }
-    .auth-section { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.6); align-items: center; justify-content: center; z-index: 9999; padding: 20px; }
-    .auth-section.hidden { display: none; }
-    .auth-card { background: white; padding: 40px; border-radius: 24px; text-align: center; max-width: 400px; width: 100%; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3); position: relative; pointer-events: auto; }
-    .auth-close { position: absolute; top: 16px; right: 16px; background: none; border: none; font-size: 28px; color: #9ca3af; cursor: pointer; width: 32px; height: 32px; display: flex; align-items: center; justify-content: center; border-radius: 8px; line-height: 1; padding: 0; }
-    .auth-title { font-size: 28px; font-weight: 800; color: #7c3aed; margin-bottom: 8px; }
-    .auth-subtitle { font-size: 14px; color: #9ca3af; margin-bottom: 24px; }
-    .google-login-btn { background: white; border: 2px solid #e5e7eb; padding: 14px 24px; border-radius: 12px; font-size: 16px; font-weight: 600; color: #1f2937; cursor: pointer; display: inline-flex; align-items: center; justify-content: center; gap: 12px; transition: all 0.2s; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06); user-select: none; }
-    .user-profile { display: none; }
+
+    @media (max-width: 640px) {
+      body { padding: 12px; }
+      h1 { font-size: 24px; }
+      .card { padding: 16px; }
+      .target-display { font-size: 28px; }
+      .pronunciation-hint { font-size: 15px; }
+      .category-tabs { grid-template-columns: 1fr; }
+    }
+
+    /* === 로그인 모달 크기/클릭 수정 === */
+    .auth-section { 
+      display: none; position: fixed; inset: 0;
+      background: rgba(0, 0, 0, 0.45);
+      align-items: center; justify-content: center;
+      z-index: 9999; padding: 16px; pointer-events: auto;
+    }
+    .auth-section:not(.hidden){ display:flex; }
+
+    .auth-card{
+      max-width: 360px; width: 100%;
+      padding: 24px; border-radius: 18px;
+      background: white;
+      box-shadow: 0 18px 50px rgba(0,0,0,0.35);
+      position: relative; pointer-events: auto;
+      text-align: center;
+    }
+    .auth-close { position:absolute; top:10px; right:10px; background:none; border:none; font-size:22px; color:#9ca3af; cursor:pointer; width:32px; height:32px; border-radius:8px; line-height:1; }
+    .auth-close:hover { background:#f3f4f6; color:#6b7280; }
+    .auth-title { font-size: 24px; font-weight: 800; color: #7c3aed; margin-bottom: 6px; }
+    .auth-subtitle { font-size: 13px; color: #9ca3af; margin-bottom: 18px; }
+    .google-login-btn { background: white; border: 2px solid #e5e7eb; padding: 12px 16px; border-radius: 12px; font-size: 14px; font-weight: 600; color: #1f2937; cursor: pointer; display: inline-flex; align-items: center; justify-content: center; gap: 12px; transition: all 0.2s; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06); user-select: none; }
+    .google-login-btn:hover { background:#f9fafb; }
+    .user-profile { display:none; } /* demo-safe */
     .stats-card { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 6px; margin-bottom: 8px; }
     .stat-item { background: #f9fafb; padding: 10px; border-radius: 10px; text-align: center; }
     .stat-value { font-size: 18px; font-weight: 800; color: #7c3aed; }
@@ -85,20 +118,16 @@
   </style>
 </head>
 <body>
-  <div class="header-container" style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px;">
+  <!-- Header -->
+  <div class="header-container">
     <div class="header-left">
       <h1>Sori <span style="font-size: 14px; color: #9ca3af; font-weight: 600;">(beta)</span></h1>
       <div class="intro">Master Korean with K-Drama lines and daily conversations</div>
     </div>
-  </div>
-
-    <!-- Google Login Button -->
-  <div style="text-align:right; margin-bottom:10px;">
-    <button onclick="handleGoogleLogin()" 
-            style="background:#7c3aed;color:white;border:none;padding:8px 16px;
-                   border-radius:12px;font-size:13px;font-weight:700;cursor:pointer;">
-      Sign in with Google
-    </button>
+    <div class="header-right">
+      <button class="login-btn" id="loginBtn">Login</button>
+      <button class="my-btn" id="myBtn" onclick="handleMyButton && handleMyButton()">My</button>
+    </div>
   </div>
 
   <div class="card">
@@ -159,11 +188,24 @@
     <div class="progress" id="prog">1 / 30</div>
   </div>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-  
+  <!-- 🔹 로그인 모달 -->
+  <div class="auth-section hidden" id="authModal">
+    <div class="auth-card">
+      <button class="auth-close" id="authClose" aria-label="Close">×</button>
+      <div class="auth-title">Sign in</div>
+      <div class="auth-subtitle">Use your Google account</div>
+      <button class="google-login-btn" id="googleBtn" onclick="handleGoogleLogin && handleGoogleLogin()">
+        <svg width="18" height="18" viewBox="0 0 48 48" aria-hidden="true">
+          <path fill="#FFC107" d="M43.6 20.5h-1.9V20H24v8h11.3C33.6 32.6 29.2 36 24 36c-6.6 0-12-5.4-12-12s5.4-12 12-12c3.1 0 5.9 1.2 8 3.1l5.7-5.7C34.2 6.6 29.4 4 24 4 12.9 4 4 12.9 4 24s8.9 20 20 20c10 0 19-7.3 19-20 0-1.2-.1-2.4-.4-3.5z"/>
+          <path fill="#FF3D00" d="M6.3 14.7l6.6 4.8C14.5 16.1 18.9 12 24 12c3.1 0 5.9 1.2 8 3.1l5.7-5.7C34.2 6.6 29.4 4 24 4 16 4 9.2 8.5 6.3 14.7z"/>
+          <path fill="#4CAF50" d="M24 44c5.1 0 9.9-1.9 13.5-5.1l-6.2-5.1C29.2 36 26.8 37 24 37c-5.1 0-9.5-3.4-11.1-8.1l-6.6 5C9.2 39.5 16 44 24 44z"/>
+          <path fill="#1976D2" d="M43.6 20.5H24v8h11.3c-1.3 3.7-4.7 6.5-8.7 6.5-5.1 0-9.5-3.4-11.1-8.1l-6.6 5C10 38.7 16.5 44 24 44c10 0 19-7.3 19-20 0-1.2-.1-2.4-.4-3.5z"/>
+        </svg>
+        <span>Continue with Google</span>
+      </button>
+    </div>
+  </div>
+
   <!-- 데이터 파일들 -->
   <script defer src="data/daily.js"></script>
   <script defer src="data/drama.js"></script>
@@ -174,7 +216,18 @@
   <script defer src="js/state.js"></script>
   <script defer src="js/tts.js"></script>
   <script defer src="js/app.js"></script>
+
+  <!-- 모달 열기/닫기만 담당 -->
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const modal = document.getElementById("authModal");
+      document.getElementById("loginBtn")?.addEventListener("click", () => {
+        modal?.classList.remove("hidden");
+      });
+      document.getElementById("authClose")?.addEventListener("click", () => {
+        modal?.classList.add("hidden");
+      });
+    });
+  </script>
 </body>
 </html>
-
-
